# card-counter

./:  .rultor.yml  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: codeql.yml  docs.yml  doxygen.yml
src/: card-counterui.rc  carddeck.cpp  carddeck.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  strategy.cpp  strategy.hpp  table.cpp  table.hpp  tableslot.cpp  tableslot.hpp  yacardcounterui.rc
src/strategy/: strategy.cpp  strategy.hpp  strategyinfo.cpp  strategyinfo.hpp
src/table/: table.cpp  table.hpp  tableslot.cpp  tableslot.hpp
src/widgets/: cards.cpp  cards.hpp  carousel.cpp  carousel.hpp  frame.cpp  frame.hpp  label.hpp
src/widgets/base/: frame.cpp  frame.hpp  label.cpp  label.hpp  svgrenderer.cpp  svgrenderer.hpp
